--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: rgb(238, 255, 0);
+    background-color: rgb(253, 0, 0);
+    
 }
 h2{
     text-align: center;
     margin: 10px;
-    color: rgb(13, 114, 197);
+    color: rgb(235, 252, 0);
 }
 .container{
     display: flex;
@@ -15,6 +16,7 @@ h2{
     width: 100vw;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s linear;
 }
 .container .list{
     background-color: rgba(0, 0, 0, 0.1);
